Added voting function (not yet debugged)

--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,10 @@
 cugc_db=data/cugc.db
 
 [banner]
-mattermost_token=[your own token]
+mattermost_token=oe9zgqmrjfgiibrawzrjr55dke
 
 [task]
 mattermost_token=[your own token]
+
+[voting]
+mattermost_token=6fjnzx3ep7fstxn84qz7bnnr8h
