--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -2,10 +2,9 @@
 module=cugc.wsgi:app
 
 master=true
-processes=5
+processes=1
 
-socket=mattermost_cugcbot.sock
-chmod-socket=660
+http-socket=:5000
 vacuum=true
 
 die-on-term=true
