--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,9 @@ version: "2"
 
 services:
   app:
-    image: yulapshun/mattermost-cugcbot:latest
-    ports:
-      - "5000:5000"
+    image: yulapshun/mattermost-cugcbot:new
     volumes:
-      - ./uwsgi.ini:/root/uwsgi.ini
-      - ./config.ini:/root/config.ini
-      - ./cugc:/root/cugc/
+      - ./cugc/data:/root/cugc/data
     env_file: .env
     logging:
       driver: "json-file"
@@ -16,4 +12,3 @@ services:
         max-size: "20M"
         max-file: "10"
     mem_limit: ${DOCKER_MEM}
-    command: uwsgi --ini uwsgi.ini
